# lia-vael-beyond-citadel

./: .gitignore  AGENTS.md  README.md
docs/: README.md  scope.md  (+6 more)
tools/pcc-dialog-toolkit/: .gitignore  PCC_Dialog_Viewer.ini  PLAN.md  README.md  go.mod  pyproject.toml
tools/pcc-dialog-toolkit/cmd/pcc-scan/: main.go
tools/pcc-dialog-toolkit/docs/: README.md  legendaryexplorer-reference-map.md  output-schema-v0.1.md  phase0-setup-checklist.md  phase1-pcc-reader-smoke.md  phase13-mvp-runbook.md  phase2-bioconversation-detection.md  phase3-closure-playbook.md  phase4-validation-runbook.md  phase5-output-contract-runbook.md  phase6-qa-runbook.md  release-v0.1.0-rc.md  release-v0.1.1-rc-phase13.md
tools/pcc-dialog-toolkit/internal/scan/: files.go  index.go  index_test.go  pcc.go  scanner.go  scanner_test.go  types.go
tools/pcc-dialog-toolkit/samples/: README.md
tools/pcc-dialog-toolkit/scripts/: run_probe_regression.py
tools/pcc-dialog-toolkit/src/: cli.py  validation.py
tools/pcc-dialog-toolkit/src/dialogue/: conversation_parser.py
tools/pcc-dialog-toolkit/src/gui/: PLAN.md  README.md  app.py  state.py
tools/pcc-dialog-toolkit/src/model/: __init__.py  ast.py
tools/pcc-dialog-toolkit/src/pcc/: models.py  properties.py  reader.py  unreal_props.py
tools/pcc-dialog-toolkit/tests/: test_cli_smoke.py  test_pcc_reader_phase1.py  test_phase0_contract.py  test_phase2_bioconversation_detection.py  test_phase3_ast_stub.py  test_phase3_batch_report.py  test_phase3_property_bootstrap.py  test_phase3_report.py  test_phase4_tlk.py  test_phase5_serializer_cli.py
(+22 files in other folders)
