[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcc-dialog-toolkit"
version = "0.1.0"
description = "Toolkit MVP para extraer dialogos BioConversation de PCC"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lia'Vael Mod Team" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=9.0"]

[project.scripts]
pcc_dialog_extract = "pcc_dialog_toolkit.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
