[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcc-dialog-toolkit"
version = "0.1.1rc0"
description = "MVP toolkit to extract BioConversation dialogue from PCC files"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lia'Vael Mod Team" }]
dependencies = ["lzallright>=0.2.6"]

[project.optional-dependencies]
dev = ["pytest>=9.0"]
gui = ["imgui-bundle>=1.90"]

[project.scripts]
pcc_dialog_extract = "cli:main"
pcc_dialog_viewer = "gui:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
